<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NeedHelp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:padding="@dimen/spacing_large"
            android:text="Help!"
            android:textAlignment="center"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/cross"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/white"
            android:padding="@dimen/spacing_large"
            android:src="@drawable/ic_baseline_close_24"/>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_large"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/file_doee_not_exist_check_file_path"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_in_the_browse_section_select_file_manager_in_the_navigation_drawer_then_navigate_to_the_file_select_hit_okay"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <ImageView
                    android:adjustViewBounds="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/example_ss" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_do_not_select_file_from_the_download_recent_or_any_other_option"
                    android:textSize="14sp" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_or_go_to_file_manager_select_the_file_send_share_the_file_select_pcm_player_and_converter_to_play"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <ImageView
                    android:adjustViewBounds="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/example_ss_2" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_directly_edit_the_file_path"
                    android:textSize="14sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xlarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/encoding_not_listed"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_mail_us_at_rajatnagpureiiest_gmail_com"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_we_would_update_the_app_and_roll_out_in_next_few_days"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_update_your_app_from_play_store_and_enjoy"
                    android:textSize="14sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xlarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/note"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/if_you_want_some_feature_to_be_implemented_or_report_a_bug_please_mail_us_at_rajatnagpureiiest_gmail_com"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>